--- a/public/css/style.css
+++ b/public/css/style.css
@@ -200,3 +200,35 @@ input::placeholder {
 .login-form button:hover {
     background-color: #555;
 }
+
+.job-card-container{
+    margin: 10%;
+}
+.job-card-list {
+    list-style-type: none;
+    padding: 0;
+}
+
+.job-card {
+    background-color: #f2f2f2;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 30px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.job-card:hover {
+    /* background-color: #ffedef; */
+    transform: scale(1.05);
+}
+
+.job-card h3 {
+    margin-top: 0;
+}
+
+.job-card p {
+    margin-bottom: 10px;
+}
+.title{
+    margin-left: 30px;
+    margin-top: 50px;
+}
