--- a/public/css/style.css
+++ b/public/css/style.css
@@ -239,7 +239,7 @@ footer {
     padding: 10px;
     border-style: solid;
     border-color: #a8a8a8;
-    background-color: #939090;
+    background-color: #b6b5b5;
     /* border-radius: 1px; */
 }
 
@@ -298,4 +298,12 @@ input::placeholder {
 .title {
     margin-left: 30px;
     margin-top: 50px;
+}
+
+.alert-danger{
+        background-color: #f8d7da;
+        color: #721c24;
+        border-color: #f5c6cb;
+        padding: 1rem;
+        margin-bottom: 1rem;    
 }
