--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,16 +5,18 @@
     padding: 0;
     overflow-y: scroll;
 } */
-.content-container{
+.content-container {
     font-family: 'Inter';
     margin-left: 5rem;
     margin-right: 5rem;
     padding: 0;
 }
-.home-container{
+
+.home-container {
     font-family: 'Inter';
     padding: 0;
 }
+
 nav {
     background-color: #0f0e0e;
     padding: 20px;
@@ -28,11 +30,11 @@ nav {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     /* justify-content: center; */
-  }
-  
-  .fixed-div {
+}
+
+.fixed-div {
     flex-shrink: 0;
-  }  
+}
 
 .navbar-center {
     display: flex;
@@ -40,22 +42,26 @@ nav {
     color: #fff;
     gap: 5rem;
 }
-a{
-    color:#fff; 
+
+.theme {
+    color: #fff;
     text-decoration: none;
-    &:hover{
+
+    &:hover {
         color: #D94452;
-    text-decoration: none;
+        text-decoration: none;
     }
 }
-.navbar-profile{
-    display:flex;
+
+.navbar-profile {
+    display: flex;
     justify-content: flex-end;
 }
 
-.color-blue a{
+.color-blue a {
     color: rgb(11, 11, 161);
-    &:hover{
+
+    &:hover {
         color: #D94452;
     }
 }
@@ -65,31 +71,32 @@ a{
     background-color: transparent;
     color: #fff;
     margin: 0 20px;
-padding: 0;
+    padding: 0;
 }
 
-.logout-button:hover{
+.logout-button:hover {
     color: #D94452;
 }
-.center-text{
+
+.center-text {
     text-align: center;
 }
 
 body::-webkit-scrollbar {
     width: 0.5em;
-  }
-  
-  body::-webkit-scrollbar-track {
+}
+
+body::-webkit-scrollbar-track {
     background-color: #f1f1f1;
-  }
-  
-  body::-webkit-scrollbar-thumb {
+}
+
+body::-webkit-scrollbar-thumb {
     background-color: #888;
-  }
-  
-  body::-webkit-scrollbar-thumb:hover {
+}
+
+body::-webkit-scrollbar-thumb:hover {
     background-color: #D94452;
-  }
+}
 
 /* 
 
@@ -280,8 +287,15 @@ input::placeholder {
     padding: 10px;
     margin-bottom: 30px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
+} 
 
+.job-detail{
+    background-color: #f2f2f2;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 30px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 .job-card:hover {
     /* background-color: #ffedef; */
     transform: scale(1.05);
@@ -300,10 +314,20 @@ input::placeholder {
     margin-top: 50px;
 }
 
-.alert-danger{
-        background-color: #f8d7da;
-        color: #721c24;
-        border-color: #f5c6cb;
-        padding: 1rem;
-        margin-bottom: 1rem;    
+.alert-danger {
+    background-color: #f8d7da;
+    color: #721c24;
+    border-color: #f5c6cb;
+    padding: 1rem;
+    margin-bottom: 1rem;
+}
+
+.cards {
+    text-decoration: none;
+
+    &:hover {
+        color: #D94452;
+        text-decoration: none;
+
+    }
 }
